# rstnpc

./: .gitignore  cleanupTargets.ps1
01/hello_world/: Cargo.toml
01/hello_world/src/: csv.rs  main.rs  operation.rs
asynctokio/: Cargo.toml
asynctokio/src/: main.rs
documentation/src/: main.rs
errors_again/: Cargo.toml
errors_again/src/: main.rs
generics/src/: main.rs
hw10/: readme.md
hw10/client/: Cargo.toml  run8080.bat
hw10/client/src/: main.rs
hw10/server/: Cargo.toml
hw10/server/src/: main.rs
hw10/shared/: Cargo.toml
hw10/shared/src/: lib.rs
hw11/: server_client.drawio
hw11/server/: Cargo.toml
hw11/server/src/: main.rs
hw11/shared/src/: lib.rs
hw13/: readme.md
hw13/client/: Cargo.toml  run8080.bat  run8080_with_chaos_monkey.bat
hw13/client/src/: main.rs
hw13/server/: Cargo.toml  run8080.bat
hw13/server/src/: main.rs
hw13/shared/: Cargo.toml
hw13/shared/src/: lib.rs
hw15/: readme.md  server_client.drawio  tasks.drawio
hw15/client/: Cargo.toml
hw15/client/src/: main.rs
hw15/server/: Cargo.toml
hw15/server/src/: db.rs  main.rs
hw15/shared/: Cargo.toml
hw15/shared/src/: lib.rs
hw17/: readme.md
hw17/client/: run8080_asHugo.bat
hw17/client/src/: main.rs
hw17/server/: Cargo.toml
hw17/server/src/: actor_connected_clients.rs  actor_db.rs  connected_clients.rs  db.rs  main.rs  web.rs  web_handlebars_ext.rs
hw17/server/templates/: messages.html.hbs  shared.html.hbs  users.html.hbs
hw17/server/templates/bak/: users.html.hbs
hw17/shared/src/: lib.rs
hw19/: readme.md
hw19/client/: run8080_asFidex.bat
hw19/client/src/: main.rs
hw19/server/: Cargo.toml
hw19/server/images/: favicon.png.txt
hw19/server/src/: actor_connected_clients.rs  main.rs  metrics.rs  web.rs
hw19/server/templates/: users.html.hbs
hw19/server/templates/bak/: shared.html.hbs
io/: testfile.txt  testfile2.txt
io/src/: main.rs
logtest/: Cargo.toml
logtest/src/: main.rs
net/: Cargo.toml
net/src/: lib.rs  main.rs
ownership/src/: main.rs
ractor_test/: Cargo.toml
supdns/: Cargo.toml
supdns/src/: dns_txt_resolver.rs  main.rs  spf_checker.rs
test/ownership_test/src/: main.rs
testing/: Cargo.toml
testing/benches/: mybench.rs
testing/src/: lib.rs
testing/tests/: mod.rs
threads/: Cargo.toml
threads/src/: main.rs
ytissues/: Cargo.toml
ytissues/src/: main.rs  yt_item_processor.rs
ytissues/testing/: sampleissue.json
