[package]
name = "logtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["kv_unstable", "kv_unstable_serde"] }
simple_logger = { version = "4.2.0", features = ["threads"] }
