[package]
name = "supdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = "0.24.0"
once_cell = "1.18.0"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
