[package]
name = "ytissues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = {version = "1.12.0", features = ["attributes"]}
reqwest = "0.11.22"
urlencoding = "2.1.3"
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.107"
chrono = "0.4.31"
