[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stdin = "0.3.1"
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
shared = { path = "../shared" }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
