[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
