[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
flume = "0.11.0"
handlebars = "4.5.0"
itertools = "0.12.0"
log = "0.4.20"
ractor = "0.9.3"
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
shared = { path = "../shared" }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-test = "0.4.3"
